<resources>
    <string name="app_name">MiniProject</string>

    <string name="month_year">%1$s %2$d</string>

    <string name="btn_check_in">Check In</string>
    <string name="btn_check_out">Check Out</string>

    <string name="log_check_in">Check-in</string>
    <string name="log_check_out">Check-out</string>

    <!--About Toast-->
    <string name="data_applied">The data has been applied.</string>
    <string name="data_deleted">The data has been deleted.</string>

    <string name="leave_annual">Annual (P)</string>
    <string name="leave_private">Private Leave (NP)</string>
    <string name="leave_sick">Sick (P)</string>
    <string name="leave_special_holiday">Special Holiday (P)</string>
    <string name="leave_none">None</string>

    <string name="period_am">AM</string>
    <string name="period_pm">PM</string>
    <string name="period_full">Full Day</string>
    <string name="period_none"> </string>

    <string name="request_check_in">Request check-in</string>
    <string name="request_check_out">Request check-out</string>
    <string name="request_OT">Request OT</string>
    <string name="request_leave">Request leave</string>
    <string name="request_none"> </string>

    <string name="activity_check_in">Check-in</string>
    <string name="activity_request_check_in">Request Check-in</string>
    <string name="activity_check_out">Check-out</string>
    <string name="activity_request_check_out">Request Check-out</string>
    <string name="activity_request_ot">Request OT</string>
    <string name="activity_request_leave">Request Leave</string>
    <string name="activity_unknown">Unknown</string>

    <string name="no_attendance_data">There is no an Attendance data</string>
    <string name="check_in_error">Check in error.</string>
    <string name="check_out_error">Check out error.</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="date_setting">Date Setting</string>
    <string name="submit">SUBMIT</string>

    <!--About Spinner-->
    <string-array name="requestType">
        <item> </item>
        <item>Request check-in</item>
        <item>Request check-out</item>
        <item>Request OT</item>
        <item>Request leave</item>
    </string-array>

    <string-array name="leaveType">
        <item> </item>
        <item>Annual (P)</item>
        <item>Private Leave (NP)</item>
        <item>Sick (P)</item>
        <item>Special Holiday (P)</item>
    </string-array>

    <string-array name="periodType">
        <item> </item>
        <item>AM</item>
        <item>PM</item>
        <item>Full Day</item>
    </string-array>

    <string name="error_clock_in_failed">การลงเวลาเข้างานล้มเหลว</string>
    <string name="error_clock_out_failed">การลงเวลาออกงานล้มเหลว</string>
    <string name="error_network">ข้อผิดพลาดเครือข่าย: %1$s</string>
    <string name="error_load_data_failed">โหลดข้อมูลล้มเหลว: %1$s</string>
    <string name="error_leave_failed">การยื่นใบลาล้มเหลว: %1$s</string>
    <string name="check_in_success">Check-in สำเร็จเวลา %1$s</string>
    <string name="check_out_success">Check-out สำเร็จเวลา %1$s</string>
    <string name="error_load_user_failed">โหลดข้อมูลผู้ใช้ล้มเหลว: %1$s</string>

    <string name="leave_application_success">ยื่นใบลาสำเร็จ รหัสคำขอ: %1$s</string>
    <string name="toast_error">Error: %s</string>
    <string name="toast_check_in_success">Check-in success at %1$s</string>
    <string name="toast_check_out_success">Check-out success at %1$s</string>
</resources>