<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.activity.SecondActivity">

    <!-- Toolbar ด้านบน -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="#70CCC6">

        <!-- ปุ่ม back -->
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start|top"
            android:layout_marginStart="9dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/ic_previous" />

        <!-- Title อยู่กลางจอจริง -->
        <TextView
            android:id="@+id/title_date_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_semibold"
            android:text="@string/date_setting"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/day_bar"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="#B0B0B0"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semibold"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semibold"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semibold"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semibold"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semibold"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semibold"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semibold"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />
    </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#FBF3F3">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendarRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:clipToPadding="false"
                tools:listitem="@layout/item_month"
                android:fontFamily="@font/roboto_regular"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>
        </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="#70CCC6">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="358dp"
            android:layout_height="37dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="7dp"
            android:background="@drawable/bottom_btn1_nm"
            android:text="@string/submit"
            android:textSize="16sp" />
    </FrameLayout>

</LinearLayout>
